--- a/examples/package.ini
+++ b/examples/package.ini
@@ -1,4 +1,4 @@
-;creator=ppkantorski
+;creator=Dimasick-git
 ;version=0.2.2
 [HOS Reboot]
 copy /bootloader/hekate_ipl.ini /bootloader/hekate_ipl.ini.bak
